--- a/MVVMWithClosures/HomeList/Views/BandCell.xib
+++ b/MVVMWithClosures/HomeList/Views/BandCell.xib
@@ -10,12 +10,15 @@
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="BandCell" rowHeight="80" id="dLW-E3-oFv" customClass="BandCell" customModule="MVVMWithClosures" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="414" height="80"/>
+            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleAspectFit" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="dLW-E3-oFv" id="XYS-Yf-xcb">
                 <rect key="frame" x="0.0" y="0.0" width="414" height="80"/>
+                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="gw7-zI-YUN">
                         <rect key="frame" x="10" y="10" width="70" height="60"/>
                         <constraints>
+                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="60" id="DCn-Xu-7BR"/>
                             <constraint firstAttribute="height" constant="60" id="Sbj-s1-oT4"/>
                             <constraint firstAttribute="width" constant="70" id="cFI-5g-R0k"/>
                         </constraints>
@@ -29,9 +32,16 @@
                 </subviews>
                 <constraints>
                     <constraint firstItem="gw7-zI-YUN" firstAttribute="top" secondItem="XYS-Yf-xcb" secondAttribute="top" constant="10" id="0zu-9f-9l4"/>
+                    <constraint firstItem="gw7-zI-YUN" firstAttribute="leading" secondItem="XYS-Yf-xcb" secondAttribute="leading" constant="10" id="13W-J8-uIm"/>
                     <constraint firstAttribute="bottom" secondItem="Mxs-kg-ikl" secondAttribute="bottom" constant="10" id="1RD-9U-buN"/>
+                    <constraint firstItem="gw7-zI-YUN" firstAttribute="top" secondItem="XYS-Yf-xcb" secondAttribute="top" constant="10" id="BZ6-iA-2dR"/>
+                    <constraint firstAttribute="bottom" secondItem="gw7-zI-YUN" secondAttribute="bottom" constant="10" id="C4f-gO-KHa"/>
                     <constraint firstItem="Mxs-kg-ikl" firstAttribute="leading" secondItem="gw7-zI-YUN" secondAttribute="trailing" constant="10" id="DYw-Bm-gds"/>
+                    <constraint firstItem="Mxs-kg-ikl" firstAttribute="leading" secondItem="gw7-zI-YUN" secondAttribute="trailing" constant="10" id="HM7-DC-OBr"/>
+                    <constraint firstAttribute="trailing" secondItem="Mxs-kg-ikl" secondAttribute="trailing" constant="10" id="HSI-Ry-0Ql"/>
+                    <constraint firstItem="Mxs-kg-ikl" firstAttribute="top" secondItem="XYS-Yf-xcb" secondAttribute="top" constant="10" id="Jyl-Hb-uRN"/>
                     <constraint firstItem="gw7-zI-YUN" firstAttribute="leading" secondItem="XYS-Yf-xcb" secondAttribute="leading" constant="10" id="PIu-Iw-jRH"/>
+                    <constraint firstAttribute="bottom" secondItem="Mxs-kg-ikl" secondAttribute="bottom" constant="10" id="Ple-o5-o5Y"/>
                     <constraint firstItem="Mxs-kg-ikl" firstAttribute="top" secondItem="XYS-Yf-xcb" secondAttribute="top" constant="10" id="ZIT-2z-MGB"/>
                     <constraint firstAttribute="trailing" secondItem="Mxs-kg-ikl" secondAttribute="trailing" constant="10" id="f9D-0d-KEC"/>
                     <constraint firstAttribute="bottom" secondItem="gw7-zI-YUN" secondAttribute="bottom" constant="10" id="p1p-qf-WdJ"/>
